added welcome message

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,15 @@
             android:text="@string/title_Startseite"
             android:textAlignment="center"
             android:textSize="20sp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="45dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:text="@string/Willkommensnachricht_ohne_Token"
+            android:textSize="20sp"
+            android:textAlignment="center"/>
 
 
 
