added TOKEN design

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,14 @@
             android:textSize="25sp"
             android:textAlignment="center"/>
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Hier Token eingeben"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:layout_marginTop="155dp"/>
 
 
     </FrameLayout>
