--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -8,7 +8,7 @@
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/uhr"
+        android:icon="@drawable/uhr2"
         android:title="@string/title_Vertretungsplan" />
 
     <item
