--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -8,7 +8,12 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        android:layout_marginTop="50dp"/>
+        android:text="@string/title_Vertretungsplan"
+        android:layout_marginTop="25dp"
+        android:textAlignment="center"
+        android:textSize="25sp"/>
+
 
 </FrameLayout>
+
+    <!--TODO : Add table for "Vertretungsplan" -->
