--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -11,7 +11,8 @@
         android:text="@string/title_Vertretungsplan"
         android:layout_marginTop="25dp"
         android:textAlignment="center"
-        android:textSize="25sp"/>
+        android:textSize="25sp"
+        android:textColor="@color/colorPrimary"/>
 
 
 </FrameLayout>
