--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -14,6 +14,16 @@
         android:textSize="25sp"
         android:textColor="@color/colorPrimary"/>
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hier kommt dann die Abfrage rein, die uns den Vertretungsplan zieht"
+        android:textAlignment="center"
+        android:layout_marginTop="60dp"
+        android:textSize="20sp"
+        android:textColor="@color/colorPrimary"/>
+
 
 </FrameLayout>
 
