--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -18,7 +18,7 @@
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hier kommt dann die Abfrage rein, die uns den Vertretungsplan zieht"
+        android:text="@string/Platzhalter"
         android:textAlignment="center"
         android:layout_marginTop="60dp"
         android:textSize="20sp"
