added platzhalter Vertretungsplan

--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -1,4 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,6 +23,17 @@
         android:layout_marginTop="60dp"
         android:textSize="20sp"
         android:textColor="@color/colorPrimary"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="50dp"
+        android:scaleType="center"
+        android:adjustViewBounds="false"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
 </FrameLayout>
 
     <!--TODO : Add table for "Vertretungsplan" -->
