--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,8 +3,9 @@
 
     <item
         android:id="@+id/navigation_Start"
+        android:checkable="false"
         android:icon="@drawable/homebutton"
-        android:title="@string/title_Startseite" />
+        android:title="@string/title_Startseite"/>
 
     <item
         android:id="@+id/navigation_dashboard"
