--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="25dp"
         android:textAlignment="center"
         android:textSize="25sp"
-        android:textColor="@color/colorPrimary"/>
+        android:textColor="@color/colorPrimaryDark"/>
 
     <ImageView
         android:id="@+id/imageView"
@@ -32,7 +32,7 @@
         android:layout_marginTop="60dp"
         android:text="@string/Platzhalter"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp" />
 </FrameLayout>
 
