--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00a494</color>
+    <color name="colorPrimary">#3036a7</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="colorNavigation">#f5f5f5</color>
-    <color name="icons">#FFFFFF</color>
+    <color name="colorAccent">#15154b</color>
+    <color name="colorNavigation">#3036a7</color>
+    <color name="colorPrimarytwo">#00a494</color>
+    <color name="white">#ffffff</color>
+    <color name="uebergang">#212679</color>
 </resources>
+
+
