--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -14,18 +14,6 @@
         android:textSize="25sp"
         android:textColor="@color/colorPrimaryDark"/>
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginLeft="250dp"
-        android:scaleType="center"
-        android:adjustViewBounds="false"
-        app:srcCompat="@drawable/homebutton"
-        />
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
@@ -35,6 +23,17 @@
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="250dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="100dp"
+        android:adjustViewBounds="false"
+        android:scaleType="center"
+        app:srcCompat="@drawable/homebutton" />
 </FrameLayout>
 
     <!--TODO : Add table for "Vertretungsplan" -->
