--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -6,6 +6,7 @@
     tools:context="sebastian.design.code.schulapp.SecondFragment">
 
     <TextView
+        android:id="@+id/textview3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/title_Vertretungsplan"
@@ -23,17 +24,4 @@
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="250dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="100dp"
-        android:adjustViewBounds="false"
-        android:scaleType="center"
-        app:srcCompat="@drawable/homebutton" />
 </FrameLayout>
-
-    <!--TODO : Add table for "Vertretungsplan" -->
