--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,7 @@
     <color name="colorPrimary">#3036a7</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#ff0000</color>
-    <color name="colorNavigation">#3036a7</color>
-    <color name="colorPrimarytwo">#00a494</color>
+    <color name="colorNavigation">@color/colorPrimary</color>
     <color name="white">#ffffff</color>
     <color name="uebergang">#212679</color>
 </resources>
