Vertretungsplan Bild eingefügt

--- a/app/src/main/res/layout/fragment_second2.xml
+++ b/app/src/main/res/layout/fragment_second2.xml
@@ -11,10 +11,11 @@
         android:layout_height="match_parent"
         android:text="@string/Boring" />
 
+
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/vertretungsplanverbesserung_720" />
+        android:id="@+id/imageView3"
+        android:layout_width="283dp"
+        android:layout_height="387dp"
+        app:srcCompat="@drawable/vertretungsplanpimp" />
 
 </FrameLayout>
