--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -8,8 +8,17 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="ThirdFragment"
+        android:text="Schulaufgabenplan"
+        android:textColor="@color/colorPrimaryDark"
         android:textAlignment="center"
         android:textSize="25sp" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="20dp"
+        android:layout_marginTop="50sp"
+        android:textAlignment="center"
+        android:text="Der Schulaufgabenplan ist noch nicht online. Bitte warte bis dein Direktoriat ihn veröffentlicht"/>
 
 </FrameLayout>
