--- a/app/src/main/res/layout/fragment_fourth.xml
+++ b/app/src/main/res/layout/fragment_fourth.xml
@@ -37,7 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="25sp"
         android:layout_marginTop="260sp"
-        app:srcCompat="@drawable/tele" />
+        app:srcCompat="@drawable/tele"
+        android:contentDescription="Image Button" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
